--- a/FantasyEfmo.html
+++ b/FantasyEfmo.html
@@ -1069,7 +1069,7 @@
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
         {points:7, minutes:70, goals:0, assists:1, cards:0, comment:'↪️🅰️ (7,2+🅰️)'},
-        {points:null, minutes:64, goals:0, assists:0, cards:0, comment:'↪️ (-)'}
+        {points:6, minutes:64, goals:0, assists:0, cards:0, comment:'↪️ (7,3)'}
       ]},
 
     { id:13, name:'J. Zarcero', pos:'Defensa', status:'Lesionado', special: false, performances:[
@@ -1109,7 +1109,7 @@
         {points:6, minutes:90, goals:0, assists:1, cards:1, comment:'🟨🅰️ (7,0+🅰️)'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Sancionado'},
         {points:5, minutes:90, goals:0, assists:0, cards:1, comment:'🟨 (7,0)'},
-        {points:null, minutes:64, goals:1, assists:0, cards:0, comment:'↪️⚽🅿️ (0,0+⚽🅿️)'}
+        {points:10, minutes:64, goals:1, assists:0, cards:0, comment:'↪️⚽🅿️ (7,5+⚽🅿️)'}
       ]},
 
     { id:15, name:'Víctor Jaén', pos:'Centrocampista', status:'OK', special: false, performances:[
@@ -1189,7 +1189,7 @@
         {points:4, minutes:73, goals:0, assists:0, cards:0, comment:'↪️ (6,9)'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
         {points:4, minutes:90, goals:0, assists:0, cards:0, comment:'(6,8)'},
-        {points:null, minutes:64, goals:0, assists:0, cards:0, comment:'↪️ (-)'}
+        {points:0, minutes:64, goals:0, assists:0, cards:0, comment:'↪️ (6,0)'}
       ]},
 
     { id:19, name:'Mario', pos:'Centrocampista', status:'OK', special: false, performances:[
@@ -1309,7 +1309,7 @@
         {points:1, minutes:59, goals:0, assists:0, cards:0, comment:'↪️ (6,2)'},
         {points:0, minutes:90, goals:0, assists:0, cards:1, comment:'🟨 (6,0)'},
         {points:2, minutes:64, goals:0, assists:0, cards:0, comment:'↪️ (6,4)'},
-        {points:null, minutes:64, goals:0, assists:0, cards:1, comment:'🟨↪️ (-)'}
+        {points:1, minutes:64, goals:0, assists:0, cards:1, comment:'🟨↪️ (6,3)'}
       ]},
 
     { id:25, name:'S. Griñán', pos:'Atacante', status:'OK', special: false, performances:[
