--- a/InformeJ17.html
+++ b/InformeJ17.html
@@ -746,14 +746,14 @@
           { number: '20', name: 'A. Molina', rating: '-', goals: 0, assists: 0, cards: null }
         ], //El último sin coma
         'mediocentros': [
-          { number: '12', name: 'L. Lausín', rating: '-', goals: 0, assists: 0, cards: null },
+          { number: '12', name: 'L. Lausín', rating: '7,3', goals: 0, assists: 0, cards: null },
           { number: '21', name: 'Víctor Jaén', rating: '7,2', goals: 1, assists: 0, cards: null },
-          { number: '23', name: 'Javi Pardo', rating: '-', goals: 0, assists: 0, cards: null },
+          { number: '23', name: 'Javi Pardo', rating: '6,0', goals: 0, assists: 0, cards: null },
           { number: '2', name: 'Á. Brito', rating: '6,6', goals: 0, assists: 0, cards: '🟨' },
-          { number: '10', name: 'Kito', rating: '-', goals: 1, assists: 0, cards: null }
+          { number: '10', name: 'Kito', rating: '7,5', goals: 1, assists: 0, cards: null }
         ], //El último sin coma
         'delanteros': [
-          { number: '18', name: 'Manu de V.', rating: '-', goals: 0, assists: 0, cards: '🟨' }
+          { number: '18', name: 'Manu de V.', rating: '6,3', goals: 0, assists: 0, cards: '🟨' }
         ] //El último sin coma
       };
 
