--- a/StatsJ17.html
+++ b/StatsJ17.html
@@ -156,6 +156,86 @@
             <div class="stat-row"><span class="stat-label">Entradas</span><span class="stat-value">0/2</span></div>
         </div>
     </div>
+
+    <div class="player-card">
+        <div class="player-header">
+            <div><span class="player-name">Javi Pardo</span><span class="player-pos">MCO/MCD</span></div>
+            <div class="rating-badge">6,0</div>
+        </div>
+        <div class="stats-container">
+            <div class="stat-row"><span class="stat-label">Minutos</span><span class="stat-value">64</span></div>
+            <div class="stat-row"><span class="stat-label">Goles en contra</span><span class="stat-value">3</span></div>
+            <div class="stat-row"><span class="stat-label">Despejes</span><span class="stat-value">2</span></div>
+            <div class="stat-row"><span class="stat-label">Recuperaciones</span><span class="stat-value">2</span></div>
+            <div class="stat-row"><span class="stat-label">Pases cortos</span><span class="stat-value">6/9</span></div>
+            <div class="stat-row"><span class="stat-label">Duelos suelo</span><span class="stat-value">1/4</span></div>
+            <div class="stat-row"><span class="stat-label">Duelos aéreos</span><span class="stat-value">1/1</span></div>
+            <div class="stat-row"><span class="stat-label">Regateado</span><span class="stat-value">2</span></div>
+            <div class="stat-row"><span class="stat-label">Posesiones perdidas</span><span class="stat-value">3</span></div>
+            <div class="stat-row"><span class="stat-label">Tiros fuera / Bloqueados</span><span class="stat-value">1 / 1</span></div>
+            <div class="stat-row"><span class="stat-label">Faltas / Recibidas</span><span class="stat-value">1 / 1</span></div>
+        </div>
+    </div>
+
+    <div class="player-card">
+        <div class="player-header">
+            <div><span class="player-name">Kito</span><span class="player-pos">MD</span></div>
+            <div class="rating-badge">7,5</div>
+        </div>
+        <div class="stats-container">
+            <div class="stat-row"><span class="stat-label">Minutos</span><span class="stat-value">64</span></div>
+            <div class="stat-row"><span class="stat-label">Goles</span><span class="stat-value">1</span></div>
+            <div class="stat-row"><span class="stat-label">Goles en contra</span><span class="stat-value">3</span></div>
+            <div class="stat-row"><span class="stat-label">Pases clave</span><span class="stat-value">2</span></div>
+            <div class="stat-row"><span class="stat-label">Duelos suelo</span><span class="stat-value">5/5</span></div>
+            <div class="stat-row"><span class="stat-label">Regates</span><span class="stat-value">2/3</span></div>
+            <div class="stat-row"><span class="stat-label">Centros</span><span class="stat-value">2/3</span></div>
+            <div class="stat-row"><span class="stat-label">Pases cortos</span><span class="stat-value">15/21</span></div>
+            <div class="stat-row"><span class="stat-label">Recuperaciones</span><span class="stat-value">3</span></div>
+            <div class="stat-row"><span class="stat-label">Posesiones perdidas</span><span class="stat-value">12</span></div>
+            <div class="stat-row"><span class="stat-label">Tiros a puerta</span><span class="stat-value">1</span></div>
+        </div>
+    </div>
+
+    <div class="player-card">
+        <div class="player-header">
+            <div><span class="player-name">L. Lausín</span><span class="player-pos">MI</span></div>
+            <div class="rating-badge">7,3</div>
+        </div>
+        <div class="stats-container">
+            <div class="stat-row"><span class="stat-label">Minutos</span><span class="stat-value">64</span></div>
+            <div class="stat-row"><span class="stat-label">Penaltis provocados</span><span class="stat-value">1</span></div>
+            <div class="stat-row"><span class="stat-label">Ocasiones creadas</span><span class="stat-value">1</span></div>
+            <div class="stat-row"><span class="stat-label">Intercepciones</span><span class="stat-value">3</span></div>
+            <div class="stat-row"><span class="stat-label">Despejes</span><span class="stat-value">3</span></div>
+            <div class="stat-row"><span class="stat-label">Pases clave</span><span class="stat-value">1</span></div>
+            <div class="stat-row"><span class="stat-label">Pases cortos</span><span class="stat-value">7/9</span></div>
+            <div class="stat-row"><span class="stat-label">Entradas</span><span class="stat-value">1/1</span></div>
+            <div class="stat-row"><span class="stat-label">Regates</span><span class="stat-value">1/1</span></div>
+            <div class="stat-row"><span class="stat-label">Recuperaciones</span><span class="stat-value">2</span></div>
+            <div class="stat-row"><span class="stat-label">Duelos suelo</span><span class="stat-value">2/5</span></div>
+        </div>
+    </div>
+
+    <div class="player-card">
+        <div class="player-header">
+            <div><span class="player-name">Manu de V.</span><span class="player-pos">DC</span></div>
+            <div class="rating-badge">6,3</div>
+        </div>
+        <div class="stats-container">
+            <div class="stat-row"><span class="stat-label">Minutos</span><span class="stat-value">64</span></div>
+            <div class="stat-row"><span class="stat-label">Tarjetas amarillas</span><span class="stat-value">1</span></div>
+            <div class="stat-row"><span class="stat-label">Ocasiones claras falladas</span><span class="stat-value">1</span></div>
+            <div class="stat-row"><span class="stat-label">Duelos aéreos</span><span class="stat-value">4/6</span></div>
+            <div class="stat-row"><span class="stat-label">Tiros a puerta / Fuera</span><span class="stat-value">2 / 3</span></div>
+            <div class="stat-row"><span class="stat-label">Duelos suelo</span><span class="stat-value">3/6</span></div>
+            <div class="stat-row"><span class="stat-label">Pases clave</span><span class="stat-value">1</span></div>
+            <div class="stat-row"><span class="stat-label">Pases cortos</span><span class="stat-value">7/14</span></div>
+            <div class="stat-row"><span class="stat-label">Entradas</span><span class="stat-value">1/1</span></div>
+            <div class="stat-row"><span class="stat-label">Faltas recibidas</span><span class="stat-value">2</span></div>
+            <div class="stat-row"><span class="stat-label">Posesiones perdidas</span><span class="stat-value">8</span></div>
+        </div>
+    </div>
   
 </div>
     
