--- a/FantasyEfmo.html
+++ b/FantasyEfmo.html
@@ -869,7 +869,7 @@
         {points:1, minutes:90, goals:0, assists:0, cards:0, comment:'(6,3)'},
         {points:4, minutes:90, goals:0, assists:0, cards:0, comment:'(6,8)'},
         {points:11, minutes:90, goals:0, assists:0, cards:0, comment:'(9,0)'},
-        {points:null, minutes:90, goals:0, assists:0, cards:0, comment:'(-)'}
+        {points:-1, minutes:90, goals:0, assists:0, cards:0, comment:'(5,9)'}
       ]},
 
     { id:3, name:'Álvaro', pos:'Portero', status:'Duda', special: false, performances:[
@@ -909,7 +909,7 @@
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
         {points:10, minutes:90, goals:0, assists:0, cards:1, comment:'🟨 (8,1)'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
-        {points:null, minutes:90, goals:1, assists:0, cards:0, comment:'⚽ (0,0+⚽)'}
+        {points:11, minutes:90, goals:1, assists:0, cards:0, comment:'⚽ (7,3+⚽)'}
       ]},
 
     { id:5, name:'J. Martínez', pos:'Centrocampista', status:'OK', special: false, performances:[
@@ -949,7 +949,7 @@
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
         {points:6, minutes:90, goals:0, assists:0, cards:0, comment:'(7,3)'},
         {points:5, minutes:90, goals:0, assists:0, cards:1, comment:'🟨 (7,1)'},
-        {points:null, minutes:90, goals:0, assists:0, cards:1, comment:'🟨 (-)'}
+        {points:1, minutes:90, goals:0, assists:0, cards:1, comment:'🟨 (6,2)'}
       ]},
 
     { id:7, name:'Jacobo', pos:'Defensa', status:'OK', special: false, performances:[
@@ -969,7 +969,7 @@
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'-'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
-        {points:null, minutes:26, goals:0, assists:0, cards:1, comment:'🟨↩️ (-)'}
+        {points:-1, minutes:26, goals:0, assists:0, cards:1, comment:'🟨↩️ (5,8)'}
       ]},
 
     { id:8, name:'Rodri', pos:'Defensa', status:'OK', special: false, performances:[
@@ -989,7 +989,7 @@
         {points:2, minutes:90, goals:0, assists:0, cards:1, comment:'🟨 (6,4)'},
         {points:4, minutes:29, goals:0, assists:0, cards:0, comment:'↩️ (6,8)'},
         {points:6, minutes:64, goals:0, assists:0, cards:0, comment:'↪️ (7,2)'},
-        {points:null, minutes:90, goals:0, assists:0, cards:0, comment:'(-)'}
+        {points:2, minutes:90, goals:0, assists:0, cards:0, comment:'(6,4)'}
       ]},
 
     { id:9, name:'Adriano', pos:'Defensa', status:'Lesionado', special: false, performances:[
@@ -1049,7 +1049,7 @@
         {points:2, minutes:17, goals:0, assists:0, cards:0, comment:'↩️ (6,4)'},
         {points:4, minutes:61, goals:0, assists:0, cards:0, comment:'↪️ (6,8)'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
-        {points:null, minutes:90, goals:0, assists:0, cards:0, comment:'(-)'}
+        {points:0, minutes:90, goals:0, assists:0, cards:0, comment:'(6,1)'}
       ]},
 
     { id:12, name:'L. Lausín', pos:'Centrocampista', status:'Duda', special: false, performances:[
