--- a/InformeJ17.html
+++ b/InformeJ17.html
@@ -737,13 +737,13 @@
       // '🟨' '🟥' '🔴🅿️' '🔴' '🧤'
       const playersConfirmada = {
         'portero': [
-          { number: '1', name: 'Gabri', rating: '-', goals: 0, assists: 0, cards: null }
+          { number: '1', name: 'Gabri', rating: '5,9', goals: 0, assists: 0, cards: null }
         ],
         'defensas': [
-          { number: '16', name: 'Luisja', rating: '-', goals: 1, assists: 0, cards: null },
-          { number: '25', name: 'Rodri', rating: '-', goals: 0, assists: 0, cards: null },
-          { number: '6', name: 'Rafa', rating: '-', goals: 0, assists: 0, cards: '🟨' },
-          { number: '20', name: 'A. Molina', rating: '-', goals: 0, assists: 0, cards: null }
+          { number: '16', name: 'Luisja', rating: '7,3', goals: 1, assists: 0, cards: null },
+          { number: '25', name: 'Rodri', rating: '6,4', goals: 0, assists: 0, cards: null },
+          { number: '6', name: 'Rafa', rating: '6,2', goals: 0, assists: 0, cards: '🟨' },
+          { number: '20', name: 'A. Molina', rating: '6,1', goals: 0, assists: 0, cards: null }
         ], //El último sin coma
         'mediocentros': [
           { number: '12', name: 'L. Lausín', rating: '7,3', goals: 0, assists: 0, cards: null },
@@ -760,7 +760,7 @@
       // Datos del banquillo - MODIFICADO: Agregar campo 'cards'
       const benchPlayers = [
         { number: '22', name: 'J. Agudo', rating: '-', goals: 0, assists: 0, cards: null },
-        { number: '15', name: 'Jacobo', rating: '-', goals: 0, assists: 0, cards: '🟨' },
+        { number: '15', name: 'Jacobo', rating: '5,8', goals: 0, assists: 0, cards: '🟨' },
         { number: '3', name: 'Mario', rating: '-', goals: 0, assists: 0, cards: null },
         { number: '19', name: 'Pablo', rating: '-', goals: 0, assists: 0, cards: '🟨' },
         { number: '14', name: 'J. Ogayar', rating: '-', goals: 0, assists: 0, cards: null },
