--- a/StatsJ17.html
+++ b/StatsJ17.html
@@ -114,6 +114,158 @@
 
   <div class="player-card">
         <div class="player-header">
+            <div><span class="player-name">Gabri</span><span class="player-pos">POR</span></div>
+            <div class="rating-badge">5,9</div>
+        </div>
+        <div class="stats-container">
+            <div class="stat-row"><span class="stat-label">Minutos</span><span class="stat-value">90</span></div>
+            <div class="stat-row"><span class="stat-label">Posicion</span><span class="stat-value">POR</span></div>
+            <div class="stat-row"><span class="stat-label">Goles en contra</span><span class="stat-value">5</span></div>
+            <div class="stat-row"><span class="stat-label">Pases cortos</span><span class="stat-value">11/12</span></div>
+            <div class="stat-row"><span class="stat-label">Pases largos</span><span class="stat-value">6/18</span></div>
+            <div class="stat-row"><span class="stat-label">Posesiones perdidas</span><span class="stat-value">6</span></div>
+            <div class="stat-row"><span class="stat-label">Entradas</span><span class="stat-value">2/2</span></div>
+            <div class="stat-row"><span class="stat-label">Intercepciones</span><span class="stat-value">2</span></div>
+            <div class="stat-row"><span class="stat-label">Despejes</span><span class="stat-value">3</span></div>
+            <div class="stat-row"><span class="stat-label">Recuperaciones</span><span class="stat-value">6</span></div>
+            <div class="stat-row"><span class="stat-label">Duelos suelo</span><span class="stat-value">2/2</span></div>
+            <div class="stat-row"><span class="stat-label">Paradas</span><span class="stat-value">2</span></div>
+            <div class="stat-row"><span class="stat-label">Despejes por alto</span><span class="stat-value">1</span></div>
+            <div class="stat-row"><span class="stat-label">Salidas</span><span class="stat-value">2/2</span></div>
+        </div>
+    </div>
+
+    <div class="player-card">
+        <div class="player-header">
+            <div><span class="player-name">Molina</span><span class="player-pos">LD</span></div>
+            <div class="rating-badge">6,1</div>
+        </div>
+        <div class="stats-container">
+            <div class="stat-row"><span class="stat-label">Minutos</span><span class="stat-value">90</span></div>
+            <div class="stat-row"><span class="stat-label">Posicion</span><span class="stat-value">LD</span></div>
+            <div class="stat-row"><span class="stat-label">Goles en contra</span><span class="stat-value">5</span></div>
+            <div class="stat-row"><span class="stat-label">Pases clave</span><span class="stat-value">2</span></div>
+            <div class="stat-row"><span class="stat-label">Ocasiones claras creadas</span><span class="stat-value">1</span></div>
+            <div class="stat-row"><span class="stat-label">Centros</span><span class="stat-value">0/1</span></div>
+            <div class="stat-row"><span class="stat-label">Pases cortos</span><span class="stat-value">26/31</span></div>
+            <div class="stat-row"><span class="stat-label">Pases largos</span><span class="stat-value">1/5</span></div>
+            <div class="stat-row"><span class="stat-label">Posesiones perdidas</span><span class="stat-value">5</span></div>
+            <div class="stat-row"><span class="stat-label">Entradas</span><span class="stat-value">1/1</span></div>
+            <div class="stat-row"><span class="stat-label">Intercepciones</span><span class="stat-value">5</span></div>
+            <div class="stat-row"><span class="stat-label">Despejes</span><span class="stat-value">3</span></div>
+            <div class="stat-row"><span class="stat-label">Tiros bloqueados</span><span class="stat-value">1</span></div>
+            <div class="stat-row"><span class="stat-label">Recuperaciones</span><span class="stat-value">4</span></div>
+            <div class="stat-row"><span class="stat-label">Regateado</span><span class="stat-value">2</span></div>
+            <div class="stat-row"><span class="stat-label">Duelos suelo</span><span class="stat-value">1/7</span></div>
+        </div>
+    </div>
+
+    <div class="player-card">
+        <div class="player-header">
+            <div><span class="player-name">Rafa</span><span class="player-pos">DFC</span></div>
+            <div class="rating-badge">6,2</div>
+        </div>
+        <div class="stats-container">
+            <div class="stat-row"><span class="stat-label">Minutos</span><span class="stat-value">90</span></div>
+            <div class="stat-row"><span class="stat-label">Posicion</span><span class="stat-value">DFC</span></div>
+            <div class="stat-row"><span class="stat-label">Tarjetas amarillas</span><span class="stat-value">1</span></div>
+            <div class="stat-row"><span class="stat-label">Goles en contra</span><span class="stat-value">5</span></div>
+            <div class="stat-row"><span class="stat-label">Pases clave</span><span class="stat-value">1</span></div>
+            <div class="stat-row"><span class="stat-label">Centros</span><span class="stat-value">2/2</span></div>
+            <div class="stat-row"><span class="stat-label">Pases cortos</span><span class="stat-value">24/32</span></div>
+            <div class="stat-row"><span class="stat-label">Pases largos</span><span class="stat-value">6/17</span></div>
+            <div class="stat-row"><span class="stat-label">Posesiones perdidas</span><span class="stat-value">9</span></div>
+            <div class="stat-row"><span class="stat-label">Regates</span><span class="stat-value">1/1</span></div>
+            <div class="stat-row"><span class="stat-label">Faltas recibidas</span><span class="stat-value">1</span></div>
+            <div class="stat-row"><span class="stat-label">Entradas</span><span class="stat-value">0/1</span></div>
+            <div class="stat-row"><span class="stat-label">Intercepciones</span><span class="stat-value">2</span></div>
+            <div class="stat-row"><span class="stat-label">Despejes</span><span class="stat-value">12</span></div>
+            <div class="stat-row"><span class="stat-label">Tiros bloqueados</span><span class="stat-value">2</span></div>
+            <div class="stat-row"><span class="stat-label">Recuperaciones</span><span class="stat-value">3</span></div>
+            <div class="stat-row"><span class="stat-label">Regateado</span><span class="stat-value">1</span></div>
+            <div class="stat-row"><span class="stat-label">Faltas</span><span class="stat-value">3</span></div>
+            <div class="stat-row"><span class="stat-label">Duelos suelo</span><span class="stat-value">3/8</span></div>
+            <div class="stat-row"><span class="stat-label">Duelos aéreos</span><span class="stat-value">0/1</span></div>
+            <div class="stat-row"><span class="stat-label">Despejes en línea de gol</span><span class="stat-value">1</span></div>
+        </div>
+    </div>
+
+    <div class="player-card">
+        <div class="player-header">
+            <div><span class="player-name">Rodri</span><span class="player-pos">DFC</span></div>
+            <div class="rating-badge">6,4</div>
+        </div>
+        <div class="stats-container">
+            <div class="stat-row"><span class="stat-label">Minutos</span><span class="stat-value">90</span></div>
+            <div class="stat-row"><span class="stat-label">Posicion</span><span class="stat-value">DFC</span></div>
+            <div class="stat-row"><span class="stat-label">Goles en contra</span><span class="stat-value">5</span></div>
+            <div class="stat-row"><span class="stat-label">Pases cortos</span><span class="stat-value">14/15</span></div>
+            <div class="stat-row"><span class="stat-label">Pases largos</span><span class="stat-value">1/2</span></div>
+            <div class="stat-row"><span class="stat-label">Posesiones perdidas</span><span class="stat-value">2</span></div>
+            <div class="stat-row"><span class="stat-label">Entradas</span><span class="stat-value">1/1</span></div>
+            <div class="stat-row"><span class="stat-label">Intercepciones</span><span class="stat-value">4</span></div>
+            <div class="stat-row"><span class="stat-label">Despejes</span><span class="stat-value">5</span></div>
+            <div class="stat-row"><span class="stat-label">Tiros bloqueados</span><span class="stat-value">3</span></div>
+            <div class="stat-row"><span class="stat-label">Recuperaciones</span><span class="stat-value">4</span></div>
+            <div class="stat-row"><span class="stat-label">Duelos suelo</span><span class="stat-value">2/4</span></div>
+            <div class="stat-row"><span class="stat-label">Duelos aéreos</span><span class="stat-value">1/3</span></div>
+        </div>
+    </div>
+
+    <div class="player-card">
+        <div class="player-header">
+            <div><span class="player-name">Jacobo</span><span class="player-pos">DFC</span></div>
+            <div class="rating-badge">5,8</div>
+        </div>
+        <div class="stats-container">
+            <div class="stat-row"><span class="stat-label">Minutos</span><span class="stat-value">26</span></div>
+            <div class="stat-row"><span class="stat-label">Posicion</span><span class="stat-value">DFC</span></div>
+            <div class="stat-row"><span class="stat-label">Tarjetas amarillas</span><span class="stat-value">1</span></div>
+            <div class="stat-row"><span class="stat-label">Goles en contra</span><span class="stat-value">2</span></div>
+            <div class="stat-row"><span class="stat-label">Centros</span><span class="stat-value">0/1</span></div>
+            <div class="stat-row"><span class="stat-label">Pases cortos</span><span class="stat-value">1/1</span></div>
+            <div class="stat-row"><span class="stat-label">Pases largos</span><span class="stat-value">2/3</span></div>
+            <div class="stat-row"><span class="stat-label">Posesiones perdidas</span><span class="stat-value">1</span></div>
+            <div class="stat-row"><span class="stat-label">Entradas</span><span class="stat-value">1/2</span></div>
+            <div class="stat-row"><span class="stat-label">Despejes</span><span class="stat-value">5</span></div>
+            <div class="stat-row"><span class="stat-label">Tiros bloqueados</span><span class="stat-value">2</span></div>
+            <div class="stat-row"><span class="stat-label">Recuperaciones</span><span class="stat-value">1</span></div>
+            <div class="stat-row"><span class="stat-label">Regateado</span><span class="stat-value">1</span></div>
+            <div class="stat-row"><span class="stat-label">Faltas</span><span class="stat-value">1</span></div>
+            <div class="stat-row"><span class="stat-label">Duelos suelo</span><span class="stat-value">1/4</span></div>
+            <div class="stat-row"><span class="stat-label">Duelos aéreos</span><span class="stat-value">0/1</span></div>
+        </div>
+    </div>
+
+    <div class="player-card">
+        <div class="player-header">
+            <div><span class="player-name">Luisja</span><span class="player-pos">LI</span></div>
+            <div class="rating-badge">7,3</div>
+        </div>
+        <div class="stats-container">
+            <div class="stat-row"><span class="stat-label">Minutos</span><span class="stat-value">90</span></div>
+            <div class="stat-row"><span class="stat-label">Posicion</span><span class="stat-value">LI</span></div>
+            <div class="stat-row"><span class="stat-label">Goles en contra</span><span class="stat-value">5</span></div>
+            <div class="stat-row"><span class="stat-label">Goles</span><span class="stat-value">1</span></div>
+            <div class="stat-row"><span class="stat-label">Tiros a puerta</span><span class="stat-value">2</span></div>
+            <div class="stat-row"><span class="stat-label">Centros</span><span class="stat-value">0/2</span></div>
+            <div class="stat-row"><span class="stat-label">Pases cortos</span><span class="stat-value">13/14</span></div>
+            <div class="stat-row"><span class="stat-label">Pases largos</span><span class="stat-value">1/3</span></div>
+            <div class="stat-row"><span class="stat-label">Posesiones perdidas</span><span class="stat-value">4</span></div>
+            <div class="stat-row"><span class="stat-label">Regates</span><span class="stat-value">2/2</span></div>
+            <div class="stat-row"><span class="stat-label">Entradas</span><span class="stat-value">2/3</span></div>
+            <div class="stat-row"><span class="stat-label">Intercepciones</span><span class="stat-value">2</span></div>
+            <div class="stat-row"><span class="stat-label">Despejes</span><span class="stat-value">1</span></div>
+            <div class="stat-row"><span class="stat-label">Recuperaciones</span><span class="stat-value">6</span></div>
+            <div class="stat-row"><span class="stat-label">Regateado</span><span class="stat-value">1</span></div>
+            <div class="stat-row"><span class="stat-label">Faltas</span><span class="stat-value">1</span></div>
+            <div class="stat-row"><span class="stat-label">Duelos suelo</span><span class="stat-value">5/7</span></div>
+            <div class="stat-row"><span class="stat-label">Duelos aéreos</span><span class="stat-value">0/1</span></div>
+        </div>
+    </div>  
+    
+  <div class="player-card">
+        <div class="player-header">
             <div><span class="player-name">Á. Brito</span><span class="player-pos">MCD</span></div>
             <div class="rating-badge">6,6</div>
         </div>
