--- a/StatsJ17.html
+++ b/StatsJ17.html
@@ -313,6 +313,46 @@
 
     <div class="player-card">
         <div class="player-header">
+            <div><span class="player-name">Pablo</span><span class="player-pos">MCD</span></div>
+            <div class="rating-badge">6,9</div>
+        </div>
+        <div class="stats-container">
+            <div class="stat-row"><span class="stat-label">Minutos</span><span class="stat-value">45</span></div>
+            <div class="stat-row"><span class="stat-label">Posicion</span><span class="stat-value">MCD</span></div>
+            <div class="stat-row"><span class="stat-label">Tarjetas amarillas</span><span class="stat-value">1</span></div>
+            <div class="stat-row"><span class="stat-label">Goles en contra</span><span class="stat-value">3</span></div>
+            <div class="stat-row"><span class="stat-label">Pases clave</span><span class="stat-value">1</span></div>
+            <div class="stat-row"><span class="stat-label">Centros</span><span class="stat-value">0/1</span></div>
+            <div class="stat-row"><span class="stat-label">Pases cortos</span><span class="stat-value">16/17</span></div>
+            <div class="stat-row"><span class="stat-label">Faltas recibidas</span><span class="stat-value">2</span></div>
+            <div class="stat-row"><span class="stat-label">Entradas</span><span class="stat-value">1/1</span></div>
+            <div class="stat-row"><span class="stat-label">Intercepciones</span><span class="stat-value">1</span></div>
+            <div class="stat-row"><span class="stat-label">Despejes</span><span class="stat-value">2</span></div>
+            <div class="stat-row"><span class="stat-label">Recuperaciones</span><span class="stat-value">6</span></div>
+            <div class="stat-row"><span class="stat-label">Duelos suelo</span><span class="stat-value">4/6</span></div>
+            <div class="stat-row"><span class="stat-label">Duelos aéreos</span><span class="stat-value">2/2</span></div>
+        </div>
+    </div>
+
+    <div class="player-card">
+        <div class="player-header">
+            <div><span class="player-name">Mario</span><span class="player-pos">MCD</span></div>
+            <div class="rating-badge">5,9</div>
+        </div>
+        <div class="stats-container">
+            <div class="stat-row"><span class="stat-label">Minutos</span><span class="stat-value">26</span></div>
+            <div class="stat-row"><span class="stat-label">Posicion</span><span class="stat-value">MCD</span></div>
+            <div class="stat-row"><span class="stat-label">Goles en contra</span><span class="stat-value">2</span></div>
+            <div class="stat-row"><span class="stat-label">Tiros fuera</span><span class="stat-value">1</span></div>
+            <div class="stat-row"><span class="stat-label">Pases cortos</span><span class="stat-value">3/3</span></div>
+            <div class="stat-row"><span class="stat-label">Recuperaciones</span><span class="stat-value">1</span></div>
+            <div class="stat-row"><span class="stat-label">Faltas</span><span class="stat-value">2</span></div>
+            <div class="stat-row"><span class="stat-label">Duelos suelo</span><span class="stat-value">1/4</span></div>
+        </div>
+    </div>
+
+    <div class="player-card">
+        <div class="player-header">
             <div><span class="player-name">Javi Pardo</span><span class="player-pos">MCO/MCD</span></div>
             <div class="rating-badge">6,0</div>
         </div>
@@ -335,6 +375,29 @@
         </div>
     </div>
 
+    <div class="player-card">
+        <div class="player-header">
+            <div><span class="player-name">Ogayar</span><span class="player-pos">MCO/MI</span></div>
+            <div class="rating-badge">5,8</div>
+        </div>
+        <div class="stats-container">
+            <div class="stat-row"><span class="stat-label">Minutos</span><span class="stat-value">45</span></div>
+            <div class="stat-row"><span class="stat-label">Posicion</span><span class="stat-value">MCO/MI</span></div>
+            <div class="stat-row"><span class="stat-label">Goles en contra</span><span class="stat-value">3</span></div>
+            <div class="stat-row"><span class="stat-label">Pases clave</span><span class="stat-value">1</span></div>
+            <div class="stat-row"><span class="stat-label">Pases cortos</span><span class="stat-value">7/11</span></div>
+            <div class="stat-row"><span class="stat-label">Posesiones perdidas</span><span class="stat-value">5</span></div>
+            <div class="stat-row"><span class="stat-label">Regates</span><span class="stat-value">1/3</span></div>
+            <div class="stat-row"><span class="stat-label">Entradas</span><span class="stat-value">0/1</span></div>
+            <div class="stat-row"><span class="stat-label">Despejes</span><span class="stat-value">2</span></div>
+            <div class="stat-row"><span class="stat-label">Recuperaciones</span><span class="stat-value">2</span></div>
+            <div class="stat-row"><span class="stat-label">Regateado</span><span class="stat-value">1</span></div>
+            <div class="stat-row"><span class="stat-label">Faltas</span><span class="stat-value">1</span></div>
+            <div class="stat-row"><span class="stat-label">Duelos suelo</span><span class="stat-value">0/5</span></div>
+            <div class="stat-row"><span class="stat-label">Duelos aéreos</span><span class="stat-value">2/4</span></div>
+        </div>
+    </div>
+    
     <div class="player-card">
         <div class="player-header">
             <div><span class="player-name">Kito</span><span class="player-pos">MD</span></div>
@@ -360,6 +423,28 @@
         </div>
     </div>
 
+    <div class="player-card">
+        <div class="player-header">
+            <div><span class="player-name">Rodri de Castro</span><span class="player-pos">MD</span></div>
+            <div class="rating-badge">6,4</div>
+        </div>
+        <div class="stats-container">
+            <div class="stat-row"><span class="stat-label">Minutos</span><span class="stat-value">26</span></div>
+            <div class="stat-row"><span class="stat-label">Posicion</span><span class="stat-value">MD</span></div>
+            <div class="stat-row"><span class="stat-label">Goles en contra</span><span class="stat-value">2</span></div>
+            <div class="stat-row"><span class="stat-label">Tiros a puerta</span><span class="stat-value">1</span></div>
+            <div class="stat-row"><span class="stat-label">Tiros bloqueados</span><span class="stat-value">1</span></div>
+            <div class="stat-row"><span class="stat-label">Pases cortos</span><span class="stat-value">6/8</span></div>
+            <div class="stat-row"><span class="stat-label">Pases largos</span><span class="stat-value">0/1</span></div>
+            <div class="stat-row"><span class="stat-label">Posesiones perdidas</span><span class="stat-value">3</span></div>
+            <div class="stat-row"><span class="stat-label">Regates</span><span class="stat-value">1/1</span></div>
+            <div class="stat-row"><span class="stat-label">Faltas recibidas</span><span class="stat-value">2</span></div>
+            <div class="stat-row"><span class="stat-label">Despejes</span><span class="stat-value">1</span></div>
+            <div class="stat-row"><span class="stat-label">Recuperaciones</span><span class="stat-value">3</span></div>
+            <div class="stat-row"><span class="stat-label">Duelos suelo</span><span class="stat-value">3/6</span></div>
+        </div>
+    </div>
+    
     <div class="player-card">
         <div class="player-header">
             <div><span class="player-name">L. Lausín</span><span class="player-pos">MI</span></div>
@@ -412,6 +497,29 @@
             <div class="stat-row"><span class="stat-label">Faltas</span><span class="stat-value">2</span></div>
             <div class="stat-row"><span class="stat-label">Duelos suelo</span><span class="stat-value">3/6</span></div>
             <div class="stat-row"><span class="stat-label">Duelos aéreos</span><span class="stat-value">4/6</span></div>
+        </div>
+    </div>
+
+    <div class="player-card">
+        <div class="player-header">
+            <div><span class="player-name">S. Griñán</span><span class="player-pos">DC</span></div>
+            <div class="rating-badge">7,0</div>
+        </div>
+        <div class="stats-container">
+            <div class="stat-row"><span class="stat-label">Minutos</span><span class="stat-value">26</span></div>
+            <div class="stat-row"><span class="stat-label">Posicion</span><span class="stat-value">DC</span></div>
+            <div class="stat-row"><span class="stat-label">Goles en contra</span><span class="stat-value">2</span></div>
+            <div class="stat-row"><span class="stat-label">Tiros fuera</span><span class="stat-value">2</span></div>
+            <div class="stat-row"><span class="stat-label">Ocasiones claras falladas</span><span class="stat-value">1</span></div>
+            <div class="stat-row"><span class="stat-label">Asistencias</span><span class="stat-value">1</span></div>
+            <div class="stat-row"><span class="stat-label">Pases clave</span><span class="stat-value">1</span></div>
+            <div class="stat-row"><span class="stat-label">Ocasiones claras creadas</span><span class="stat-value">1</span></div>
+            <div class="stat-row"><span class="stat-label">Centros</span><span class="stat-value">1/1</span></div>
+            <div class="stat-row"><span class="stat-label">Pases cortos</span><span class="stat-value">2/2</span></div>
+            <div class="stat-row"><span class="stat-label">Posesiones perdidas</span><span class="stat-value">1</span></div>
+            <div class="stat-row"><span class="stat-label">Regates</span><span class="stat-value">2/4</span></div>
+            <div class="stat-row"><span class="stat-label">Recuperaciones</span><span class="stat-value">2</span></div>
+            <div class="stat-row"><span class="stat-label">Duelos suelo</span><span class="stat-value">2/5</span></div>
         </div>
     </div>
   
