--- a/InformeJ17.html
+++ b/InformeJ17.html
@@ -761,11 +761,11 @@
       const benchPlayers = [
         { number: '22', name: 'J. Agudo', rating: '-', goals: 0, assists: 0, cards: null },
         { number: '15', name: 'Jacobo', rating: '5,8', goals: 0, assists: 0, cards: '🟨' },
-        { number: '3', name: 'Mario', rating: '-', goals: 0, assists: 0, cards: null },
-        { number: '19', name: 'Pablo', rating: '-', goals: 0, assists: 0, cards: '🟨' },
-        { number: '14', name: 'J. Ogayar', rating: '-', goals: 0, assists: 0, cards: null },
-        { number: '8', name: 'Rodri de Castro', rating: '-', goals: 0, assists: 0, cards: null },
-        { number: '9', name: 'S. Griñán', rating: '-', goals: 0, assists: 1, cards: null }
+        { number: '3', name: 'Mario', rating: '5,9', goals: 0, assists: 0, cards: null },
+        { number: '19', name: 'Pablo', rating: '6,9', goals: 0, assists: 0, cards: '🟨' },
+        { number: '14', name: 'J. Ogayar', rating: '5,8', goals: 0, assists: 0, cards: null },
+        { number: '8', name: 'Rodri de Castro', rating: '6,4', goals: 0, assists: 0, cards: null },
+        { number: '9', name: 'S. Griñán', rating: '7,0', goals: 0, assists: 1, cards: null }
       ]; //El último sin coma
 
       // Configuraciones de formaciones <!-- Cambiar formación en caso necesario -->
