--- a/FantasyEfmo.html
+++ b/FantasyEfmo.html
@@ -1169,7 +1169,7 @@
         {points:2, minutes:45, goals:0, assists:0, cards:0, comment:'↩️ (6,4)'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'Lesionado'},
-        {points:null, minutes:45, goals:0, assists:0, cards:1, comment:'🟨↩️ (-)'}
+        {points:4, minutes:45, goals:0, assists:0, cards:1, comment:'🟨↩️ (6,9)'}
       ]},
 
     { id:18, name:'Javi Pardo', pos:'Centrocampista', status:'OK', special: false, performances:[
@@ -1209,7 +1209,7 @@
         {points:1, minutes:17, goals:0, assists:0, cards:0, comment:'↩️ (6,2)'},
         {points:5, minutes:90, goals:0, assists:0, cards:0, comment:'(7,1)'},
         {points:1, minutes:26, goals:0, assists:0, cards:1, comment:'🟨↩️ (6,3)'},
-        {points:null, minutes:26, goals:0, assists:0, cards:0, comment:'↩️ (-)'}
+        {points:-1, minutes:26, goals:0, assists:0, cards:0, comment:'↩️ (5,9)'}
       ]},
 
     { id:20, name:'J. Ogayar', pos:'Centrocampista', status:'OK', special: false, performances:[
@@ -1229,7 +1229,7 @@
         {points:1, minutes:90, goals:0, assists:0, cards:0, comment:'(6,2)'},
         {points:3, minutes:90, goals:0, assists:0, cards:0, comment:'(6,6)'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
-        {points:null, minutes:45, goals:0, assists:0, cards:0, comment:'↩️ (-)'}
+        {points:-1, minutes:45, goals:0, assists:0, cards:0, comment:'↩️ (5,8)'}
       ]},
 
     { id:21, name:'Rodri de Castro', pos:'Atacante', status:'OK', special: false, performances:[
@@ -1249,7 +1249,7 @@
         {points:0, minutes:45, goals:0, assists:0, cards:1, comment:'🟨↪️ (6,0)'},
         {points:1, minutes:61, goals:0, assists:0, cards:1, comment:'🟨↪️ (6,2)'},
         {points:null, minutes:0, goals:0, assists:0, cards:0, comment:'No convocado'},
-        {points:null, minutes:26, goals:0, assists:0, cards:0, comment:'↩️ (-)'}
+        {points:2, minutes:26, goals:0, assists:0, cards:0, comment:'↩️ (6,4)'}
       ]},
 
     { id:22, name:'H. Panizo', pos:'Atacante', status:'Lesionado', special: false, performances:[
@@ -1329,7 +1329,7 @@
         {points:9, minutes:31, goals:1, assists:0, cards:0, comment:'↩️⚽ (7,2+⚽)'},
         {points:2, minutes:29, goals:0, assists:0, cards:0, comment:'↩️ (6,5)'},
         {points:1, minutes:26, goals:0, assists:0, cards:0, comment:'↩️ (6,3)'},
-        {points:null, minutes:26, goals:0, assists:1, cards:0, comment:'↩️🅰️ (0,0+🅰️)'}
+        {points:6, minutes:26, goals:0, assists:1, cards:0, comment:'↩️🅰️ (7,0+🅰️)'}
       ]},
 
     { id:26, name:'Manu (JB)', pos:'Defensa', status:'OK', special: true, performances:[
