--- a/StatsJ17.html
+++ b/StatsJ17.html
@@ -137,7 +137,7 @@
 
     <div class="player-card">
         <div class="player-header">
-            <div><span class="player-name">Molina</span><span class="player-pos">LD</span></div>
+            <div><span class="player-name">A. Molina</span><span class="player-pos">LD</span></div>
             <div class="rating-badge">6,1</div>
         </div>
         <div class="stats-container">
@@ -377,7 +377,7 @@
 
     <div class="player-card">
         <div class="player-header">
-            <div><span class="player-name">Ogayar</span><span class="player-pos">MCO/MI</span></div>
+            <div><span class="player-name">J. Ogayar</span><span class="player-pos">MCO/MI</span></div>
             <div class="rating-badge">5,8</div>
         </div>
         <div class="stats-container">
