--- a/InformeJ18.html
+++ b/InformeJ18.html
@@ -650,12 +650,12 @@
         'mediocentros': [
           { number: '12', name: 'L. Lausín' },
           { number: '21', name: 'Víctor Jaén' },
-          { number: '23', name: 'Javi Pardo' },
+          { number: '19', name: 'Pablo' },
           { number: '2', name: 'Á. Brito' },
-          { number: '10', name: 'Kito' }
+          { number: '8', name: 'Rodri de Castro' }
         ], //El último sin coma
         'delanteros': [
-          { number: '18', name: 'Manu de V.' }
+          { number: '14', name: 'J. Ogayar' }
         ] //El último sin coma
       };
       
