--- a/InformeJ18.html
+++ b/InformeJ18.html
@@ -643,8 +643,8 @@
         ],
         'defensas': [
           { number: '16', name: 'Luisja' },
+          { number: '15', name: 'Jacobo' },
           { number: '25', name: 'Rodri' },
-          { number: '6', name: 'Rafa' },
           { number: '20', name: 'A. Molina' }
         ], //El último sin coma
         'mediocentros': [
