--- a/InformeJ18.html
+++ b/InformeJ18.html
@@ -617,7 +617,7 @@
 
   <div class="header-informe">
     <h1>Informe Jornada 18</h1> <!-- Añadir nº de jornada -->
-    <div class="resultado-principal">EFMO Boadilla 'B' - Gimnástica Colmenarejo CF 'B'</div> <!-- Añadir rival y resultado -->
+    <div class="resultado-principal">EFMO Boadilla 'B' 1-2 Gimnástica Colmenarejo CF 'B'</div> <!-- Añadir rival y resultado -->
   </div>
 
   <!-- Alineación Probable -->
