Update player roster in InformeJ19.html

--- a/InformeJ19.html
+++ b/InformeJ19.html
@@ -642,7 +642,7 @@
           { number: '1', name: 'Gabri' }
         ],
         'defensas': [
-          { number: '16', name: 'Luisja' },
+          { number: '7', name: 'J. Martínez' },
           { number: '15', name: 'Jacobo' },
           { number: '25', name: 'Rodri' },
           { number: '20', name: 'A. Molina' }
@@ -650,12 +650,12 @@
         'mediocentros': [
           { number: '12', name: 'L. Lausín' },
           { number: '3', name: 'Mario' },
-          { number: '14', name: 'J. Ogayar' },
           { number: '19', name: 'Pablo' },
+          { number: '21', name: 'Víctor Jaén' },
           { number: '10', name: 'Kito' }
         ], //El último sin coma
         'delanteros': [
-          { number: '9', name: 'S. Griñán' }
+          { number: '14', name: 'J. Ogayar' }
         ] //El último sin coma
       };
       
