--- a/InformesPost_partido.html
+++ b/InformesPost_partido.html
@@ -155,10 +155,17 @@
 
 <section class="timeline">
   <div class="card">
+    <img src="Jornada20.jpg" alt="Jornada 20">
+    <div class="info">
+      <h2>Jornada 20</h2>
+      <a href="InformeJ20.html">Ver Alineación Probable</a>
+    </div>
+  </div>
+  <div class="card">
     <img src="Jornada19.jpg" alt="Jornada 19">
     <div class="info">
       <h2>Jornada 19</h2>
-      <a href="InformeJ19.html">Ver Alineación Probable</a>
+      <a href="InformeJ19.html">Ver Informe</a>
     </div>
   </div>
   <div class="card">
