--- a/InformeJ20.html
+++ b/InformeJ20.html
@@ -616,8 +616,8 @@
   <a href="InformesPost_partido.html" class="btn-volver">← Volver a Todos los Informes</a>
 
   <div class="header-informe">
-    <h1>Informe Jornada 00</h1> <!-- Añadir nº de jornada -->
-    <div class="resultado-principal">EFMO Boadilla 'B'</div> <!-- Añadir rival y resultado -->
+    <h1>Informe Jornada 20</h1> <!-- Añadir nº de jornada -->
+    <div class="resultado-principal">EFMO Boadilla 'B' - CD Retamar</div> <!-- Añadir rival y resultado -->
   </div>
 
   <!-- Alineación Probable -->
