--- a/InformeJ19.html
+++ b/InformeJ19.html
@@ -617,7 +617,7 @@
 
   <div class="header-informe">
     <h1>Informe Jornada 19</h1> <!-- Añadir nº de jornada -->
-    <div class="resultado-principal">CD Puerta de Madrid 'B' - EFMO Boadilla 'B'</div> <!-- Añadir rival y resultado -->
+    <div class="resultado-principal">CD Puerta de Madrid 'B' 3-2 EFMO Boadilla 'B'</div> <!-- Añadir rival y resultado -->
   </div>
 
   <!-- Alineación Probable -->
